--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       z-index: 10;
       box-shadow: 0 0 25px rgba(255, 204, 0, 0.8);
       animation: sunGlow 2s infinite alternate;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     @keyframes sunGlow {
@@ -58,7 +61,10 @@
       border-radius: 50%;
       animation: orbit 25s linear infinite;
       top: 50%;
-      transform: translateY(-50%);
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
     }
 
     @keyframes orbit {
@@ -180,48 +186,47 @@
 <body>
   <header>
     <h1>Space Explorer</h1>
-    <p>Click on a planet to learn fun facts!</p>
+    <p>Click on a planet to learn a fun fact!</p>
   </header>
 
   <div class="space-container">
     <div class="sun"></div>
     <div class="planet-ring">
-      <div class="planet" id="mercury">
+      <div class="planet" id="mercury" style="transform: rotate(0deg) translateX(300px);">
         <p class="planet-label">Mercury</p>
       </div>
-      <div class="planet" id="venus">
+      <div class="planet" id="venus" style="transform: rotate(45deg) translateX(350px);">
         <p class="planet-label">Venus</p>
       </div>
-      <div class="planet" id="earth">
+      <div class="planet" id="earth" style="transform: rotate(90deg) translateX(400px);">
         <p class="planet-label">Earth</p>
       </div>
-      <div class="planet" id="mars">
+      <div class="planet" id="mars" style="transform: rotate(135deg) translateX(450px);">
         <p class="planet-label">Mars</p>
       </div>
-      <div class="planet" id="jupiter">
+      <div class="planet" id="jupiter" style="transform: rotate(180deg) translateX(500px);">
         <p class="planet-label">Jupiter</p>
       </div>
-      <div class="planet" id="saturn">
+      <div class="planet" id="saturn" style="transform: rotate(225deg) translateX(550px);">
         <p class="planet-label">Saturn</p>
       </div>
-      <div class="planet" id="uranus">
+      <div class="planet" id="uranus" style="transform: rotate(270deg) translateX(600px);">
         <p class="planet-label">Uranus</p>
       </div>
-      <div class="planet" id="neptune">
+      <div class="planet" id="neptune" style="transform: rotate(315deg) translateX(650px);">
         <p class="planet-label">Neptune</p>
       </div>
     </div>
   </div>
 
   <section class="planet-info">
-    <h2>Click a Planet!</h2>
     <p id="planet-description">Click on a planet to learn a fun fact!</p>
   </section>
 
   <button class="exit-btn" onclick="showFunFact()">Exit</button>
 
   <footer>
-    <p>Created by Space Explorers Team</p>
+    <p></p>
   </footer>
 
   <!-- Starry Spiral and Galaxy Effects -->
