--- a/index.html
+++ b/index.html
@@ -4,274 +4,162 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Space Explorer</title>
-  <!-- Include Diary of a Wimpy Kid Font (Chewy) -->
+  <!-- Cartoonish Font -->
   <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
   <style>
-    /* General Style */
+    /* General Styles */
     body {
-      font-family: 'Chewy', sans-serif;
-      background: #000000;
-      color: white;
-      text-align: center;
       margin: 0;
-      padding: 0;
+      font-family: 'Chewy', sans-serif;
+      background-color: #000;
+      color: white;
       overflow: hidden;
-      position: relative;
+      text-align: center;
     }
 
     h1 {
       font-size: 3em;
-      color: #ffcc00;
-      text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
       margin-top: 20px;
-      font-weight: bold;
+      color: #f9d71c;
+      text-shadow: 2px 2px 4px #ff6f00;
     }
 
     p {
-      font-size: 1.2em;
+      font-size: 1.5em;
       margin-top: 10px;
+      color: #ffffff;
+    }
+
+    /* Background Stars */
+    .stars {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0) 60%);
+      animation: twinkle 2s infinite alternate;
+      pointer-events: none;
+    }
+
+    @keyframes twinkle {
+      0% { opacity: 0.6; }
+      100% { opacity: 1; }
     }
 
     /* Sun */
     .sun {
-      position: absolute;
-      background-color: #ffcc00;
+      width: 120px;
+      height: 120px;
+      background: radial-gradient(circle, #ffcc33, #ff6600);
       border-radius: 50%;
-      width: 150px;
-      height: 150px;
-      z-index: 10;
-      box-shadow: 0 0 25px rgba(255, 204, 0, 0.8);
-      animation: sunGlow 2s infinite alternate;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      margin: 30px auto;
+      box-shadow: 0 0 30px 10px #ffcc33;
+      animation: pulse 2s infinite alternate;
     }
 
-    @keyframes sunGlow {
-      0% { box-shadow: 0 0 15px #ffcc00; }
-      100% { box-shadow: 0 0 30px #ffcc00; }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      100% { transform: scale(1.1); }
     }
 
-    /* Planet Ring */
-    .planet-ring {
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    /* Planets Orbit */
+    .orbit {
+      position: relative;
+      margin: 0 auto;
+      width: 500px;
+      height: 500px;
       border-radius: 50%;
-      animation: orbit 25s linear infinite;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100%;
-      height: 100%;
+      border: 2px dashed rgba(255, 255, 255, 0.3);
+      animation: rotate 30s linear infinite;
     }
 
-    @keyframes orbit {
+    @keyframes rotate {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
 
     /* Planets */
     .planet {
-      width: 70px;
-      height: 70px;
-      background-color: #777;
-      border-radius: 50%;
-      position: absolute;
-      animation: spin 15s linear infinite;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
-    }
-
-    /* Planet colors */
-    #mercury { background-color: #b3b3b3; animation-duration: 5s; }
-    #venus { background-color: #f5c242; animation-duration: 6s; }
-    #earth { background-color: #56ccf2; animation-duration: 7s; }
-    #mars { background-color: #ff4d4d; animation-duration: 8s; }
-    #jupiter { background-color: #ffad33; animation-duration: 9s; }
-    #saturn { background-color: #f1c232; animation-duration: 10s; }
-    #uranus { background-color: #66b3b3; animation-duration: 11s; }
-    #neptune { background-color: #4d79ff; animation-duration: 12s; }
-
-    /* Planet spin animation */
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    /* Planet labels */
-    .planet-label {
-      position: absolute;
-      top: -40px;
-      font-size: 1.2em;
-      font-family: 'Chewy', sans-serif;
-      color: #ffcc00;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
-    }
-
-    /* Fun Fact and Button */
-    .planet-info {
-      margin-top: 40px;
-    }
-
-    .exit-btn {
-      background-color: #ffcc00;
-      padding: 10px 20px;
-      font-size: 1.5em;
-      border: none;
-      cursor: pointer;
-      border-radius: 12px;
-      box-shadow: 0 5px 15px rgba(255, 204, 0, 0.8);
-      margin-top: 30px;
-      transition: background-color 0.3s;
-    }
-
-    .exit-btn:hover {
-      background-color: #ff9900;
-    }
-
-    footer {
-      margin-top: 50px;
-      font-size: 1.2em;
-      color: #fff;
-    }
-
-    /* Starry Background */
-    .spiral-stars, .bad-galaxy {
-      position: absolute;
       width: 60px;
       height: 60px;
-      background: radial-gradient(circle, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0) 70%);
+      position: absolute;
       border-radius: 50%;
-      opacity: 0.6;
-      animation: twinkle 1.5s infinite alternate;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.8em;
+      color: white;
+      text-shadow: 1px 1px 2px black;
+      cursor: pointer;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+      transform-origin: -200px center;
     }
 
-    .spiral-stars {
-      left: 80%;
-      top: 20%;
-      animation-duration: 5s;
-      animation-delay: 0.5s;
-    }
+    #mercury { background-color: #b3b3b3; left: 50%; top: 50%; transform: rotate(45deg) translate(-200px, -50%); }
+    #venus { background-color: #f5c242; left: 50%; top: 50%; transform: rotate(90deg) translate(-200px, -50%); }
+    #earth { background-color: #56ccf2; left: 50%; top: 50%; transform: rotate(135deg) translate(-200px, -50%); }
+    #mars { background-color: #ff4d4d; left: 50%; top: 50%; transform: rotate(180deg) translate(-200px, -50%); }
+    #jupiter { background-color: #ffad33; left: 50%; top: 50%; transform: rotate(225deg) translate(-200px, -50%); }
+    #saturn { background-color: #f1c232; left: 50%; top: 50%; transform: rotate(270deg) translate(-200px, -50%); }
+    #uranus { background-color: #66b3b3; left: 50%; top: 50%; transform: rotate(315deg) translate(-200px, -50%); }
+    #neptune { background-color: #4d79ff; left: 50%; top: 50%; transform: rotate(360deg) translate(-200px, -50%); }
 
-    .spiral-stars:nth-child(2) {
-      left: 60%;
+    /* Fun Fact Popup */
+    .fun-fact {
+      display: none;
+      position: absolute;
       top: 50%;
-      animation-duration: 7s;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      background: rgba(0, 0, 0, 0.8);
+      border: 2px solid #f9d71c;
+      border-radius: 20px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+      z-index: 1000;
     }
 
-    .bad-galaxy {
-      width: 100px;
-      height: 100px;
-      left: 10%;
-      top: 10%;
-      background: rgba(255,255,255,0.3) url('https://www.w3schools.com/html/pic_trulli.jpg') no-repeat center;
-      background-size: cover;
-      border-radius: 50%;
-      animation-duration: 6s;
-      animation-delay: 2s;
-    }
-
-    .bad-galaxy:nth-child(2) {
-      left: 30%;
-      top: 70%;
-    }
-
-    @keyframes twinkle {
-      0% { opacity: 0.4; }
-      100% { opacity: 1; }
+    .close-btn {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background: #f9d71c;
+      border: none;
+      border-radius: 10px;
+      font-size: 1.2em;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Space Explorer</h1>
-    <p>Click on a planet to learn a fun fact!</p>
-  </header>
-
-  <div class="space-container">
-    <div class="sun"></div>
-    <div class="planet-ring">
-      <div class="planet" id="mercury" style="transform: rotate(0deg) translateX(300px);">
-        <p class="planet-label">Mercury</p>
-      </div>
-      <div class="planet" id="venus" style="transform: rotate(45deg) translateX(350px);">
-        <p class="planet-label">Venus</p>
-      </div>
-      <div class="planet" id="earth" style="transform: rotate(90deg) translateX(400px);">
-        <p class="planet-label">Earth</p>
-      </div>
-      <div class="planet" id="mars" style="transform: rotate(135deg) translateX(450px);">
-        <p class="planet-label">Mars</p>
-      </div>
-      <div class="planet" id="jupiter" style="transform: rotate(180deg) translateX(500px);">
-        <p class="planet-label">Jupiter</p>
-      </div>
-      <div class="planet" id="saturn" style="transform: rotate(225deg) translateX(550px);">
-        <p class="planet-label">Saturn</p>
-      </div>
-      <div class="planet" id="uranus" style="transform: rotate(270deg) translateX(600px);">
-        <p class="planet-label">Uranus</p>
-      </div>
-      <div class="planet" id="neptune" style="transform: rotate(315deg) translateX(650px);">
-        <p class="planet-label">Neptune</p>
-      </div>
-    </div>
+  <h1>Space Explorer</h1>
+  <div class="sun"></div>
+  <div class="orbit">
+    <div class="planet" id="mercury" onclick="showFact('Mercury', 'Mercury is the smallest planet in the solar system!')"></div>
+    <div class="planet" id="venus" onclick="showFact('Venus', 'Venus is hotter than Mercury because of its thick atmosphere!')"></div>
+    <div class="planet" id="earth" onclick="showFact('Earth', 'Earth is the only planet known to support life!')"></div>
+    <div class="planet" id="mars" onclick="showFact('Mars', 'Mars is known as the Red Planet because of its rusty soil!')"></div>
+    <div class="planet" id="jupiter" onclick="showFact('Jupiter', 'Jupiter is the largest planet in the solar system!')"></div>
+    <div class="planet" id="saturn" onclick="showFact('Saturn', 'Saturn has the most beautiful rings in the solar system!')"></div>
+    <div class="planet" id="uranus" onclick="showFact('Uranus', 'Uranus rotates on its side, unlike other planets!')"></div>
+    <div class="planet" id="neptune" onclick="showFact('Neptune', 'Neptune is the windiest planet in the solar system!')"></div>
   </div>
 
-  <section class="planet-info">
-    <p id="planet-description">Click on a planet to learn a fun fact!</p>
-  </section>
-
-  <button class="exit-btn" onclick="showFunFact()">Exit</button>
-
-  <footer>
-    <p></p>
-  </footer>
-
-  <!-- Starry Spiral and Galaxy Effects -->
-  <div class="spiral-stars"></div>
-  <div class="spiral-stars"></div>
-  <div class="bad-galaxy"></div>
-  <div class="bad-galaxy"></div>
+  <div class="fun-fact" id="factBox">
+    <h2 id="planetName"></h2>
+    <p id="planetFact"></p>
+    <button class="close-btn" onclick="closeFact()">Close</button>
+  </div>
 
   <script>
-    // Function to display fun facts when planets are clicked
-    document.getElementById('mercury').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Mercury is the smallest planet in our solar system!";
-    });
+    function showFact(name, fact) {
+      document.getElementById('planetName').textContent = name;
+      document.getElementById('planetFact').textContent = fact;
+      document.getElementById('factBox').style.display = 'block';
+    }
 
-    document.getElementById('venus').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Venus is the hottest planet, even hotter than Mercury!";
-    });
-
-    document.getElementById('earth').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Earth is the only planet known to support life!";
-    });
-
-    document.getElementById('mars').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Mars is known as the Red Planet due to its reddish appearance!";
-    });
-
-    document.getElementById('jupiter').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Jupiter is the largest planet in the solar system!";
-    });
-
-    document.getElementById('saturn').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Saturn is famous for its stunning rings!";
-    });
-
-    document.getElementById('uranus').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Uranus is tilted on its side, making its rotation unique!";
-    });
-
-    document.getElementById('neptune').addEventListener('click', function() {
-      document.getElementById('planet-description').innerHTML = "Neptune is the windiest planet in the solar system!";
-    });
-
-    // Exit button to show a funny planet fact
-    function showFunFact() {
-      alert("The planets are always happy to help you explore the solar system. Don't forget to bring your space helmet! 🚀");
+    function closeFact() {
+      document.getElementById('factBox').style.display = 'none';
     }
   </script>
 </body>
